--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
 * {
   box-sizing: border-box;
+
+/* Clean up/delete groups and better organize sections of code */
+/* Make nav bar flexbox responsive */
+/* Change article fonts */
+/* link email address to contact form */
+/* Put a map in Where Do I Live? section */
+
 }
 /* set background color. */
 body {
@@ -9,12 +16,15 @@ body {
   margin-top: 50px;
 }
 
-section h2 {
-  display: flex;
-  justify-content: center;
 
+/* center logo and page titles. */
+
+.group {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 100px;
 }
-/* center logo. */
+
 header {
   display: flex;
   justify-content: center;
@@ -22,30 +32,26 @@ header {
   margin: auto;
 }
 
-.tv-image {
-  width: auto;
-  display: flex;
-  justify-content: center;
-}
-
+/* clean up and center images */
 .center {
   display: flex;
   justify-content: center;
-  
+  filter: drop-shadow(0 0 0.55rem rgb(63, 63, 63));
   width: auto;
   height: 250px;
 }
+
+.quiz {
+  filter: drop-shadow(0 0 0.55rem rgb(63, 63, 63));
+  display: flex;
+  width: 100%;
+}
+
+
 /* set font family for all text and stylize it. */
 
 h5, h4, h3, h2, h1, p, ul {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  
-}
-
-img {
-  width: 100%;
-  display: flex;
-  
 }
 
 ol {
@@ -58,7 +64,7 @@ h4 {
 }
 /* center headings. */
 h5 {
-  
+  text-align: center;
   font-size: large;
 }
 
@@ -70,6 +76,8 @@ h3 {
 h1, h2 {
   text-align: center;
 }
+
+
 /* stylize links. */
 a {
   font-family: Arial, Helvetica, sans-serif;
@@ -82,15 +90,10 @@ a:hover   {color: blueviolet;}
 a:active  {color: yellow;}
 
 
-/* align email address center. */
-div {
-  text-align: center;
-}
 
 nav ul li a {
   display: flex;
   justify-content: center;  
-  align-content: center;
 }
 
 nav ul {
@@ -103,52 +106,21 @@ nav ul li {
 }
 
 hr {
-  height: 8px;
-  background-color: white;
-  /*border: 2px solid grey;
-       size style color */
-  margin-top: 80px;
+  height: 1px;
+  background-color: rgb(248, 246, 246);
+  margin-top: 20px;
   margin-bottom: 20px;
-  
 }
 
-.item {
-  align-items: flex-start;
-  justify-content: center;
-  padding-top: 1px;
-  
-}
 
 /* Groups and Items for Mobile First */
 
-.group h2 {
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  margin: auto;
-}
+/* Contact Form */
 
-/* Contact Form - Image */
-
-.contact-image {
-  border: 1px solid #ababab;
-  border-radius: 8px;
-}
- 
-.group {
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 100px;
-}
-
-.item {
-  flex: 1;
-  margin: 10px;
-}
-
-.item-double {
+.form {
   flex: 2;
   margin: 10px;
+  font-family: sans-serif;
 }
 
 .contact-links {
@@ -161,6 +133,14 @@ p {
   justify-content: center;
   flex-direction: column;
 }
+
+/* align email address center. */
+.emailAddress {
+  text-align: center;
+  padding-top: 1px;
+  padding-bottom: 8px;
+}
+
 
 /* Groups and Items (Desktop) */
 
