better styling and editing

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 /* Change article fonts */
 /* link email address to contact form */
 /* Put a map in Where Do I Live? section */
+/* Use alternating grid flexbox CSS */
 
 }
 /* set background color. */
