--- a/style.css
+++ b/style.css
@@ -5,11 +5,24 @@
 /* set background color. */
 body {
   background-color: rgb(219, 219, 219);
-  margin-left: 50px;
-  margin-right: 50px;
-  margin-top: 50px;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 30px;
 }
 
+/* stylize table sections */
+
+tr {
+  background: #f4f7f8;
+  border-bottom: 1px solid #FFF;
+  margin-bottom: 5px;
+}
+
+td {
+  padding: 20px;
+  text-align: left;
+  width: 33.3333%;
+}
 
 /* center logo and page titles. */
 
@@ -29,7 +42,7 @@ header {
 /* clean up and center images */
 .logo {
   display: flex;
-  justify-content: center;
+  width: auto;
   filter: drop-shadow(0 0 0.55rem rgb(63, 63, 63));
 }
 
