--- a/style.css
+++ b/style.css
@@ -185,6 +185,18 @@ p {
   .group {
       flex-direction: row;
   }
+
+  tr {
+    background: #f4f7f8;
+    border-bottom: 1px solid #FFF;
+    margin-bottom: 5px;
+  }
+  
+  td {
+    padding: 20px;
+    text-align: left;
+    width: 33.3333%;
+  }
 }
 
 /* Contact Form Design */
