--- a/style.css
+++ b/style.css
@@ -10,19 +10,24 @@ body {
   margin-top: 30px;
 }
 
-/* stylize table sections */
+/* grid */
 
-tr {
+.grid-container {
+  display: grid;
+  grid-gap: 50px;
   background: #f4f7f8;
-  border-bottom: 1px solid #FFF;
-  margin-bottom: 5px;
+  margin: 20px;
 }
 
-td {
-  padding: 20px;
-  text-align: left;
-  width: 33.3333%;
+.grid-item-col1-row1 {
+  grid-column-start: 1;
+  grid-column-end: 1;
+  grid-row-start: 1;
+  grid-row-end: 1;
+  padding: 30px;
+  
 }
+
 
 /* center logo and page titles. */
 
@@ -145,12 +150,15 @@ p {
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-/* align email address center. */
-.emailAddress {
-  text-align: center;
-  padding-top: 1px;
-  padding-bottom: 8px;
-}
+  /* scroll to top of page */
+
+  .top {
+    scroll-behavior: smooth;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+   
+  }
 
 
 /* Groups and Items (Desktop) */
@@ -165,6 +173,7 @@ p {
   .contact-links {
     justify-content: center;
     padding-bottom: 10px;
+    
   }
 
   nav ul {
@@ -186,16 +195,47 @@ p {
       flex-direction: row;
   }
 
-  tr {
+  .grid-container {
+    display: grid;
+    grid-gap: 50px;
     background: #f4f7f8;
-    border-bottom: 1px solid #FFF;
-    margin-bottom: 5px;
+    margin: 20px;
   }
   
-  td {
-    padding: 20px;
-    text-align: left;
-    width: 33.3333%;
+  .grid-item-col1-row1 {
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 1;
+    grid-row-end: 1;
+    padding: 30px;
+    
+  }
+
+  .grid-item-col2-row1 {
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 1;
+    padding: 30px;
+    
+  }
+  
+  .grid-item-col1-row2 {
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 2;
+    grid-row-end: 2;
+    padding: 30px;
+    
+  }
+  
+  .grid-item-col2-row2 {
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 2;
+    padding: 30px;
+    
   }
 }
 
