--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   display: grid;
   grid-gap: 50px;
   background: #f4f7f8;
-  margin: 20px;
+  margin: 30px;
 }
 
 .grid-item-col1-row1 {
@@ -67,25 +67,15 @@ header {
 /* set font family for all text and stylize it. */
 
 h5, h4, h3, h2, h1, p, ul, ol {
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
-}
-
-ol {
-  font-size: medium;
-}
-
-h4 {
-  font-size: large;
+  font-family: 'Nunito', sans-serif;
 }
 /* center headings. */
 h5 {
   text-align: center;
-  font-size: large;
 }
 
 h3 {
   text-align: center;
-  font-size: 20px;
 }
 
 h1, h2 {
@@ -132,7 +122,6 @@ hr {
 .form {
   flex: 2;
   margin: 10px;
-  font-family: sans-serif;
 }
 
 .contact-links {
@@ -147,7 +136,6 @@ p {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
   /* scroll to top of page */
@@ -157,7 +145,8 @@ p {
     position: fixed;
     bottom: 20px;
     right: 30px;
-   
+    border: solid 0.12rem;
+    background-color: azure;
   }
 
 
